06_app_and_db_with_network-policy/05_pod_inspect_network.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ubuntu
  namespace: default
  labels:
    name: ubuntu
spec:
  containers:
    - name: ubuntu
      image: ubuntu:latest
      resources:
        requests:
          memory: 128Mi
          cpu: 100m
        limits:
          memory: 128Mi
          cpu: 500m
      # Just sleep forever
      command: ["sleep"]
      args: ["infinity"]
