06_app_and_db_with_network-policy/01_mariadb.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bookstack-mariadb
  namespace: default
  labels:
    app: bookstack-mariadb
spec:
  serviceName: bookstack-mariadb
  replicas: 1
  selector:
    matchLabels:
      app: bookstack-mariadb
  template:
    metadata:
      labels:
        app: bookstack-mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:12.2.2
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 256Mi
              cpu: 500m
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: bookstack-mariadb-data
              mountPath: /var/lib/mysql # path inside container
      volumes:
        - name: bookstack-mariadb-data
          persistentVolumeClaim:
            claimName: bookstack-mariadb-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: bookstack-mariadb
  namespace: default
spec:
  selector:
    app: bookstack-mariadb
  type: ClusterIP
  ports:
    - name: http
      port: 3306
      targetPort: 3306 # should match containerPort in Deployment
