06_app_and_db_with_network-policy/03_application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack
  namespace: default
  labels:
    app: bookstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstack
  template:
    metadata:
      labels:
        app: bookstack
    spec:
      containers:
        - name: bookstack
          image: lscr.io/linuxserver/bookstack:25.12.7
          resources:
            requests:
              memory: 128Mi
              cpu: 100m
            limits:
              memory: 128Mi
              cpu: 500m
          ports:
            - containerPort: 80
          volumeMounts:
            - name: bookstack-config
              mountPath: /config # path inside container
      volumes:
        - name: bookstack-config
          persistentVolumeClaim:
            claimName: bookstack-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: bookstack
  namespace: default
spec:
  selector:
    app: bookstack
  type: LoadBalancer
  ports:
    - name: http
      port: 6875
      targetPort: 80 # should match containerPort in Deployment
---
# kind have built in Ingress controller: cloud-provider-kind (since version 0.9.0)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstack
  namespace: default
spec:
  rules:
    # Map the domain name to the Kubernetes node IP address that serves as your entrypoint, using a DNS server for testing.
    # Domain name can be entered in /etc/hosts.
    - host: bookstack.hands-on.k8s
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookstack # reference to created Service
                port:
                  number: 6875 # Service port number
